--- a/dist.ini
+++ b/dist.ini
@@ -13,19 +13,24 @@ copyright_year    = 2011
 -remove = Test::Portability
 
 [%PodWeaver]
--StopWords.include = TODO dist dists dir unix
+-StopWords.include = TODO dist dists dir unix checksum checksums
 [Prereqs]
 ; File::Temp->newdir
 File::Temp = 0.19
 File::Spec::Native = 1.002
+
+; These Digest mods are in core as of 5.8/5.10.
+Digest      = 1
+Digest::MD5 = 2
+Digest::SHA = 5
 
 [Run::BeforeBuild]
 ; generate test data
 run = corpus/make_dists
 
 ; CPAN::Meta requires Parse::CPAN::Meta which requires JSON::PP
-; but in some smoke test environments it seems to be missing
-; JSON-2.27 bundled it's own JSON:PP (2.27008) which may be the culprit
+; but in some smoke test environments it seems to be missing.
+; JSON-2.27 bundled it's own JSON:PP (2.27008) which may be the culprit.
 [Test::ReportPrereqs]
 :version = 0.004
 include = JSON::PP
